--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
+
+        body {
+            font-family: Special Elite, Verdana, Geneva, Tahoma, sans-serif;
+            text-align: justify;
+        }
+
         footer {
             margin-top: 20px;
             margin-bottom: 0;
@@ -97,19 +104,24 @@
                     criticisms from his people about his accession to the throne, he does his best and dreams of
                     becoming the greatest of kings. One day, he meets Kage (Shadow), a survivor of a wiped out assassin
                     clan, who understands his words despite Bojji being silent and prone to making noises.</p>
-                <img src="media/Bojji.jpg" alt="Bojji" style="width: 25%;">
+                <img src="media/Bojji.jpg" alt="Bojji" style="width: 40%;">
             </div>
 
             <div id="menu1" class="container tab-pane fade"><br>
-                <h3>Menu 1</h3>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat.</p>
+                <h3>Curiosity</h3>
+                <p>
+                    Ranking of Kings (王様ランキング, Ōsama Rankingu) is a Japanese fantasy manga series written and illustrated
+                    by Sōsuke Tōka. It has been serialized online via Echoes' user-submitted Manga Hack website since
+                    May 2017 and has been collected in twelve tankōbon volumes by Enterbrain. An anime television series
+                    adaptation by Wit Studio premiered in October 2021 on Fuji TV's Noitamina programming block.
+                </p>
+                <img src="media/author.webp" alt="Sosuke Toka" style="width: 40%;">
             </div>
 
             <div id="menu2" class="container tab-pane fade"><br>
-                <h3>Menu 2</h3>
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                    totam rem aperiam.</p>
+                <h3>About</h3>
+                <p>To know more about Ousama Ranking, please visit the <a href="https://ousamaranking.fandom.com/wiki/Ousama_Ranking_Wiki">fandom wiki made by fans!</a></p>
+                <a href="https://ousamaranking.fandom.com/wiki/Ousama_Ranking_Wiki"><img src="media/MainOusama.webp" alt="bojji and kage" style="width:40%;"></a>
             </div>
         </div>
         <!--TAB CONTENT END-->
