final commit to everything

--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
 
             <div id="menu2" class="container tab-pane fade"><br>
                 <h3>About</h3>
-                <p>To know more about Ousama Ranking, please visit the <a href="https://ousamaranking.fandom.com/wiki/Ousama_Ranking_Wiki">fandom wiki made by fans!</a></p>
-                <a href="https://ousamaranking.fandom.com/wiki/Ousama_Ranking_Wiki"><img src="media/MainOusama.webp" alt="bojji and kage" style="width:40%;"></a>
+                <iframe width="907" height="510" src="https://www.youtube.com/embed/Tr1ahorojPg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p style="margin-top:20px;">To know more about Ousama Ranking, please visit the <a href="https://ousamaranking.fandom.com/wiki/Ousama_Ranking_Wiki" target="_blank">fandom wiki made by fans!</a></p>
+                <a href="https://ousamaranking.fandom.com/wiki/Ousama_Ranking_Wiki" target="_blank"><img src="media/MainOusama.webp" alt="bojji and kage" style="width:40%;"></a>
             </div>
         </div>
         <!--TAB CONTENT END-->
@@ -129,7 +130,7 @@
     <!--CONTENT END-->
 
     <!--FOOTER START-->
-    <footer>
+    <footer style="font-family:Verdana, Geneva, Tahoma, sans-serif">
         <div class="bg-warning" style="text-align:center;">
             <p style="font-size: 10px;"> <span class="spin180deg">&copy;</span> Website made by Jianli Lin, Futureproof,
                 Week 1, day 4, Rapid Prototyping Sprint. I do not own any of the content from the IP Ranking of Kings,
